--- a/index.html
+++ b/index.html
@@ -1,53 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dasmoto</title>
-    <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
+    <title>EuroMillion</title>
+    <link href="resources/CSS/style.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
-    <!-- Banner section -->
-    <div class="banner">
-        <h1>Dasmoto's Arts & Crafts</h1>
-    </div>
-
-    <!-- Brushes section -->
-    <div>
-        <h2 class="brushes">Brushes</h2>
-        <img src="./resources/images/hacksaw.jpeg" alt="">
-
-        <h3>Hacksaw Brushes</h3>
-        <p>
-            Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. 
-            <strong>Starting at 3.00$ / brush.</strong>
-        </p>
-    </div>
-
-    <!-- Frames section -->
-    <div>
-        <h2 class="frames">Frames</h2>
-        <img src="./resources/images/frames.jpeg" alt="">
-
-        <h3>Art Frames (assorted)</h3>
-        <p>
-            Assorted frames made of different material, including MDF, birchwood and PDE. Select frames can be sanded and painted according to your needs. 
-            <strong>Starting at $2.00 / frame.</strong>
-        </p>
-    </div>
-
-    <!-- Paint section -->
-    <div>
-        <h2 class="paint">Paint</h2>
-        <img src="./resources/images/finnish.jpeg" alt="">
-
-        <h3>Clean Finnish Paint</h3>
-        <p>
-            Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8oz.). clean Finnish paint microbinds to canvas,
-            incrising the finish and longevity of any artwork. 
-            <strong>Starting at $5.00 / tube.</strong>
-        </p>
-    </div>
+    <table>
+        <caption>
+            <img src="../Table/resources/images/Euromillions_Logo.svg" alt="EUROMILLION Logo">
+            <p>RÉCAPITULATIFS DES DERNIERS TIRAGES</p>
+        </caption>
+        <thead>
+            <tr>
+                <th class="Date" scope="col">DATE</th>
+                <th class="Numéros" scope="col" colspan="5">NUMÉROS</th>
+                <th class="Etoiles" scope="col" colspan="2">ÉTOILES</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th class="Date" scope="row">VEN 05.05.2023</th>
+                <td class="Numéros"><span>03</span></td>
+                <td class="Numéros"><span>08</span></td>
+                <td class="Numéros"><span>18</span></td>
+                <td class="Numéros"><span>34</span></td>
+                <td class="Numéros"><span>49</span></td>
+                <td class="Etoiles"><span>03</span></td>
+                <td class="Etoiles"><span>07</span></td>
+            </tr>
+            <tr>
+                <th class="Date" scope="row">MAR 02.05.2023</th>
+                <td class="Numéros"><span>07</span></td>
+                <td class="Numéros"><span>32</span></td>
+                <td class="Numéros"><span>44</span></td>
+                <td class="Numéros"><span>47</span></td>
+                <td class="Numéros"><span>48</span></td>
+                <td class="Etoiles"><span>07</span></td>
+                <td class="Etoiles"><span>08</span></td>
+            </tr>
+            <tr>
+                <th class="Date" scope="row">VEN 28.04.2023</th>
+                <td class="Numéros"><span>11</span></td>
+                <td class="Numéros"><span>13</span></td>
+                <td class="Numéros"><span>16</span></td>
+                <td class="Numéros"><span>23</span></td>
+                <td class="Numéros"><span>34</span></td>
+                <td class="Etoiles"><span>01</span></td>
+                <td class="Etoiles"><span>10</span></td>
+            </tr>
+            <tr>
+                <th class="Date" scope="row">MAR 25.04.2023</th>
+                <td class="Numéros"><span>10</span></td>
+                <td class="Numéros"><span>29</span></td>
+                <td class="Numéros"><span>30</span></td>
+                <td class="Numéros"><span>40</span></td>
+                <td class="Numéros"><span>45</span></td>
+                <td class="Etoiles"><span>01</span></td>
+                <td class="Etoiles"><span>12</span></td>
+            </tr>
+            <tr>
+                <th class="Date" scope="row">VEN 21.04.2023</th>
+                <td class="Numéros"><span>07</span></td>
+                <td class="Numéros"><span>08</span></td>
+                <td class="Numéros"><span>18</span></td>
+                <td class="Numéros"><span>33</span></td>
+                <td class="Numéros"><span>42</span></td>
+                <td class="Etoiles"><span>02</span></td>
+                <td class="Etoiles"><span>08</span></td>
+            </tr>
+            <tr>
+                <th class="Date" scope="row">MAR 18.04.2023</th>
+                <td class="Numéros"><span>17</span></td>
+                <td class="Numéros"><span>21</span></td>
+                <td class="Numéros"><span>23</span></td>
+                <td class="Numéros"><span>35</span></td>
+                <td class="Numéros"><span>37</span></td>
+                <td class="Etoiles"><span>10</span></td>
+                <td class="Etoiles"><span>11</span></td>
+            </tr>
+            <tr>
+                <th class="Date" scope="row">VEN 14.04.2023</th>
+                <td class="Numéros"><span>04</span></td>
+                <td class="Numéros"><span>11</span></td>
+                <td class="Numéros"><span>37</span></td>
+                <td class="Numéros"><span>44</span></td>
+                <td class="Numéros"><span>49</span></td>
+                <td class="Etoiles"><span>06</span></td>
+                <td class="Etoiles"><span>07</span></td>
+            </tr>
+            <tr>
+                <th class="Date" scope="row">MAR 11.04.2023</th>
+                <td class="Numéros"><span>10</span></td>
+                <td class="Numéros"><span>14</span></td>
+                <td class="Numéros"><span>16</span></td>
+                <td class="Numéros"><span>19</span></td>
+                <td class="Numéros"><span>29</span></td>
+                <td class="Etoiles"><span>02</span></td>
+                <td class="Etoiles"><span>10</span></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="8">Généré manuellement le 7 mai 2023, Le Locle</td>
+            </tr>
+        </tfoot>
+    </table>    
 </body>
 </html>
