Update logo to png

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <table>
         <caption>
-            <img src="../Table/resources/images/Euromillions_Logo.svg" alt="EUROMILLION Logo">
+            <img src="../Table/resources/images/Euromillions_Logo.png" alt="EUROMILLION Logo">
             <p>RÉCAPITULATIFS DES DERNIERS TIRAGES</p>
         </caption>
         <thead>
